reduce number of CPU threads to be the same as the number of cores