@@ -10,6 +10,12 @@
 # Consider using -Dquarkus.http.io-threads=$((`grep --count ^processor /proc/cpuinfo`)) \
 
 JAVA_OPTIONS="-server \
+  -Xlog:gc* \
+  -Dquarkus.http.io-threads=$((`grep --count ^processor /proc/cpuinfo`)) \
+  -Dquarkus.vertx.event-loops-pool-size=$((`grep --count ^processor /proc/cpuinfo`)) \
+  -XX:InitialRAMPercentage=50 \
+  -XX:MaxRAMPercentage=50 \
+  -XX:+AlwaysPreTouch \
   -Dquarkus.vertx.prefer-native-transport=true  \
   -XX:-StackTraceInThrowable \
   -Dquarkus.http.accept-backlog=-1 \
